Fix page jumping when the logo loads

--- a/app/assets/stylesheets/admin/theme.scss
+++ b/app/assets/stylesheets/admin/theme.scss
@@ -33,6 +33,11 @@ div.header {
   background-image: linear-gradient(290deg, #55df98, #455b97);
   padding: 10px 0px 5px;
   margin-bottom: 20px;
+
+  img.logo {
+    height: 25px;
+    width: 96px;
+  }
 }
 
 aside {
